docker: Fix port map and link box alignment

--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -167,10 +167,6 @@
     vertical-align: top;
 }
 
-.containers-run-inline {
-    margin-left: 8px;
-}
-
 .containers-run-inline form .pficon-close,
 .containers-run-inline form .fa-plus {
     height: 26px;
